--- a/.github/workflows/push2aws.yml
+++ b/.github/workflows/push2aws.yml
@@ -1,5 +1,24 @@
-name: Push to AWS
-on:
-  push:
-    branches:
-      - "main"
+name: AWS CDK Deploy
+
+on: [push]
+jobs:
+  aws_cdk:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "14"
+      - name: Configure aws credentials
+        uses: aws-actions/configure-aws-credentials@master
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+          aws-region: 'us-west-2'
+      - name: Install dependencies
+        run: yarn
+      - name: Synth stack
+        run: yarn cdk synth
+      - name: Deploy stack
+        run: yarn cdk deploy --all --require-approval never
