--- a/.github/workflows/push2aws.yml
+++ b/.github/workflows/push2aws.yml
@@ -15,10 +15,10 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
-          aws-region: 'us-west-2'
+          aws-region: 'us-east-1'
       - name: Install dependencies
-        run: yarn
+        run: npm install -g aws-cdk
       - name: Synth stack
-        run: yarn cdk synth
+        run: cdk synth
       - name: Deploy stack
-        run: yarn cdk deploy --all --require-approval never
+        run: cdk deploy --all --require-approval never
