--- a/.github/workflows/push2aws.yml
+++ b/.github/workflows/push2aws.yml
@@ -26,7 +26,7 @@ jobs:
           python -m pip install --upgrade pip
           # install your Python dependencies here
           npm install -g aws-cdk
-          source ${PWD}/.venv/bin/activate
+          pip install --upgrade -r requirements.txt
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@master
         with:
