--- a/.github/workflows/push2aws.yml
+++ b/.github/workflows/push2aws.yml
@@ -33,6 +33,6 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
           aws-region: "us-east-1"
       - name: Deploy to AWS
-        run: cdk deploy --app="python3 ${PWD}/app.py" --require-approval=never
+        run: cdk deploy --require-approval=never
       # - name: Destroy stack
       #   run: cdk destroy --app="python3 ${PWD}/app.py" --force
